syntax = "proto3";

package pcbook;
option go_package = "pcbook/pb";


import  "google/protobuf/timestamp.proto";
// import  "proto/memory_message.proto";

message CPU {
    string brand = 1;
    string name = 2;
    uint32 number_cores = 3;
    uint32 number_threads = 4;
    double min_ghz = 5;
    double max_ghz = 6;
}

message GPU {
    string brand = 1;
    string name = 2;
    uint32 number_cores = 3;
    uint32 number_threads = 4;
    Memory memory = 5;
    double min_ghz = 6;
    double max_ghz = 7;
}

message Memory {
    enum Unit {
        UNKNOWN = 0;
        BIT = 1;
        BYTE = 2;
        KILOBYTE = 3;
        MEGABYTE = 4;
        GEGABYTE = 5;
        TERABYTE = 6;
    }
    uint64 value = 1;
    Unit unit = 2;
}
message Storage {
    enum Driver {
        UNKNOWN = 0;
        HDD = 1;
        SDD = 2;
    }
    Driver driver = 1;
    Memory memory = 2;
}

message Keyboard{
    enum Layout {
        UNKNOWN = 0;
        QWERTY = 1;
        QWERTZ = 2;
        AZERTZ = 3;
    }
    Layout layout = 1;
    bool backlit = 2;
}

message Screen{
    message Resolution{
        uint32 width = 1;
        uint32 height = 2;
    }
    enum Panel{
        UNKNOWN = 0;
        IPS = 1;
        QLED = 2;
    }
    float size_inch = 1;
    Resolution resolution = 2;
    Panel panel  = 3 ;
    bool multitouch = 4;
}

message Laptop {
    string id = 1;
    string brand = 2;
    string name = 3;
    CPU cpu = 4;
    Memory ram = 5;
    repeated GPU gpus = 6;
    repeated Storage storeges = 7;
    Screen screen = 8;
    Keyboard keyboard = 9;
    oneof weight{
        double weight_kg = 10;
        double weight_lb = 11;
    }
    double price_usd = 12;
    uint32 realease_year = 13;
    google.protobuf.Timestamp updated_at = 14;    
}

// Unery service

message CreateLaptopRequest{
    Laptop laptop = 1;
}

message CreateLaptopResponse{
    string id = 1;
}

service LaptopService {
    rpc CreateLaptop (CreateLaptopRequest) returns (CreateLaptopResponse){};
}
